<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nayyar.starks.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textColor="#000000"
        android:textStyle="italic"
        android:id="@+id/title"
        android:text="@string/stark_industries"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:scaleType="centerCrop"
        android:id="@+id/image"
        android:layout_below="@id/title"
        android:src="@drawable/stark" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:text="@string/about"
        android:layout_margin="20dp"
        android:textSize="15sp"
        android:id="@+id/about_label"
        android:textColor="#000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/about_label"
        android:layout_below="@id/image"
        android:id="@+id/about_text"
        android:layout_marginTop="20sp"
        android:layout_marginRight="10sp"
        android:text="@string/about_stark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_text"
        android:layout_margin="20dp"
        android:text="Mail: "
        android:textColor="#000"
        android:id="@+id/mail_label"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_text"
        android:layout_toRightOf="@id/about_label"
        android:layout_marginTop="20dp"
        android:autoLink="email"
        android:text="@string/mail"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_label"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/phone"
        android:text="@string/phone"
        android:textSize="15sp"
        android:textColor="#000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:layout_below="@id/mail_label"
        android:layout_toRightOf="@id/about_label"
        android:text="@string/number"/>
    </RelativeLayout>
</ScrollView>
